--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@
     align-items: center;
     justify-content: center;
     border-radius: 8px;
-    background: #d5d5d5;
+    background: #fff;
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
@@ -155,7 +155,9 @@
 }
 
 
-/* @media only screen and (max-width: 810px) {
+@media only screen and (max-width: 810px) {
+    .form-area{
+        padding: 14px 18px;
+    }
 
-
-} */
+}
